<resources>
    <string name="app_name">Online Shopping App</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <string name="orders">Orders</string>
    <string name="total_amount">Total Amount: €%1$.2f</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credits"><![CDATA[App Design & Development: Guilherme Duarte\n\nThird-Party Libraries: Fake Store API\n\nImages & Icons: This person does not exist]]></string>
    <string name="creditsTitle">Credits</string>
    <string name="copyright">Copyright © 2023 YourCompany. All rights reserved.</string>
    <string name="version">Version 1.0.0</string>
    <string name="back">Back</string>
    <string name="about_us">About us</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="place_order">Place Order</string>
    <string name="total_0_00">Total: €0.00</string>
    <string name="my_cart">My Cart</string>
    <string name="logo">logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_store">My Store</string>
    <string name="all">All</string>
    <string name="electronics">Electronics</string>
    <string name="jewelry">Jewelry</string>
    <string name="men_s_clothing">Men\'s Clothing</string>
    <string name="women_s_clothing">Women\'s Clothing</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="expand">Expand</string>
    <string name="logout">Logout</string>
    <string name="about_this_app">About this app</string>
    <string name="product_title">Product Title</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="quantity">Quantity</string>
    <string name="total_cost">Total Cost</string>
    <string name="my_orders">My Orders</string>
    <string name="you_don_t_have_any_orders_yet">You don`t have any orders yet.</string>
    <string name="category_name">Category Name</string>
    <string name="product_name">Product Name</string>
</resources>