<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/shop"
        android:icon="@drawable/baseline_shopping_basket_24"
        android:title="@string/shop" />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/baseline_shopping_cart_checkout_24"
        android:title="@string/cart" />
    <item
        android:id="@+id/orders"
        android:icon="@drawable/baseline_bookmark_added_24"
        android:title="@string/orders" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_outline_24"
        android:title="@string/profile" />
</menu>